# assignemnt-ds-filter

./: README.md  crowdin.yml  main.py  pyproject.toml
.lesson/: instructions.md  solution.md
i18n/uk/: Assignment Datasets Filter's TM-en_uk.csv  instructions.md
tests/: test_assignment.py  test_replit.py
tests/fixtures/: datasets.db
