[tool.poetry]
name = "assignment-ds-filter"
version = "1.0.0"
description = "Filter a list of dictionaries based on specified values"
authors = [
    "Vladyslav Ponomaryov",
    "Serhii Horodilov <sgorodil@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
